==> feaser/openblt/tricore_tc3_port/Target/Source/ARMCM7_STM32H7/flash.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "stm32h7xx.h"                           /* STM32 CPU and HAL header           */
#define FLASH_INVALID_SECTOR_IDX        (0xff)
#define FLASH_INVALID_ADDRESS           (0xffffffff)
#define FLASH_WRITE_BLOCK_SIZE          (1024)
#define FLASH_TOTAL_SECTORS             (sizeof(flashLayout)/sizeof(flashLayout[0]))
#define FLASH_END_ADDRESS               (flashLayout[FLASH_TOTAL_SECTORS-1].sector_start + \
                                         flashLayout[FLASH_TOTAL_SECTORS-1].sector_size - 1)
#define BOOT_FLASH_VECTOR_TABLE_CS_OFFSET    (0x298)
#define BOOT_FLASH_CUSTOM_LAYOUT_ENABLE (0u)
#include "flash_layout.c"

blt_bool FlashWrite(blt_addr addr, blt_int32u len, blt_int8u *data)
{
  blt_bool result = BLT_TRUE;
  blt_addr base_addr;

  /* validate the len parameter */
  if ((len - 1) > (FLASH_END_ADDRESS - addr))
  {
    result = BLT_FALSE;
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* make sure the addresses are within the flash device */
    if ((FlashGetSectorIdx(addr) == FLASH_INVALID_SECTOR_IDX) || \
        (FlashGetSectorIdx(addr+len-1) == FLASH_INVALID_SECTOR_IDX))
    {
      result = BLT_FALSE;
    }
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* if this is the bootblock, then let the boot block manager handle it */
    base_addr = (addr/FLASH_WRITE_BLOCK_SIZE)*FLASH_WRITE_BLOCK_SIZE;
    if (base_addr == flashLayout[0].sector_start)
    {
      /* let the boot block manager handle it */
      result = FlashAddToBlock(&bootBlockInfo, addr, data, len);
    }
    else
    {
      /* let the block manager handle it */
      result = FlashAddToBlock(&blockInfo, addr, data, len);
    }
  }

  /* give the result back to the caller */
  return result;
}

blt_bool FlashErase(blt_addr addr, blt_int32u len)
{
  blt_bool  result = BLT_TRUE;
  blt_int8u first_sector_idx = FLASH_INVALID_SECTOR_IDX;
  blt_int8u last_sector_idx = FLASH_INVALID_SECTOR_IDX;

  /* validate the len parameter */
  if ((len - 1) > (FLASH_END_ADDRESS - addr))
  {
    result = BLT_FALSE;
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* obtain the first and last sector entry indices to the flashLayout[] array. */
    first_sector_idx = FlashGetSectorIdx(addr);
    last_sector_idx  = FlashGetSectorIdx(addr+len-1);
    /* check them */
    if ((first_sector_idx == FLASH_INVALID_SECTOR_IDX) ||
        (last_sector_idx == FLASH_INVALID_SECTOR_IDX))
    {
      result = BLT_FALSE;
    }
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* erase the sectors */
    result = FlashEraseSectors(first_sector_idx, last_sector_idx);
  }

  /* give the result back to the caller */
  return result;
}

static blt_bool FlashWriteBlock(tFlashBlockInfo *block)
{
  blt_bool              result = BLT_TRUE;
  blt_addr              prog_addr;
  blt_int8u  volatile * prog_data;
  blt_int32u            word_cnt;
  blt_int8u  const      word_size = FLASH_NB_32BITWORD_IN_FLASHWORD * 4U;
  blt_int8u             byte_idx;

  /* check that the address is actually within flash */
  if (FlashGetSectorIdx(block->base_addr) == FLASH_INVALID_SECTOR_IDX)
  {
    result = BLT_FALSE;
  }

#if (BOOT_FLASH_CRYPTO_HOOKS_ENABLE > 0)
  #if (BOOT_NVM_CHECKSUM_HOOKS_ENABLE == 0)
  /* note that the bootblock is already decrypted in FlashWriteChecksum(), if the
   * internal checksum mechanism is used. Therefore don't decrypt it again.
   */
  if (block != &bootBlockInfo)
  #endif
  {
    /* perform decryption of the program data before writing it to flash memory. */
    if (FlashCryptoDecryptDataHook(block->data, FLASH_WRITE_BLOCK_SIZE) == BLT_FALSE)
    {
      result = BLT_FALSE;
    }
  }
#endif

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* unlock the flash array */
    HAL_FLASH_Unlock();

    /* program all words (32 bytes) in the block one by one */
    for (word_cnt=0; word_cnt<(FLASH_WRITE_BLOCK_SIZE/word_size); word_cnt++)
    {
      prog_addr = block->base_addr + (word_cnt * word_size);
      prog_data = (volatile blt_int8u *)(&block->data[word_cnt * word_size]);
      /* keep the watchdog happy */
      CopService();
      /* program the word */
      if (HAL_FLASH_Program(FLASH_TYPEPROGRAM_FLASHWORD, prog_addr,
          (uint32_t)prog_data) != HAL_OK)
      {
        result = BLT_FALSE;
        break;
      }
      /* verify that the written data is actually there */
      for (byte_idx = 0; byte_idx < word_size; byte_idx++)
      {
        /* compare the byte value located in flash with the one that was supposed to
         * be programmed there
         */
        if (((blt_int8u *)prog_addr)[byte_idx] != prog_data[byte_idx])
        {
          /* byte value in flash is not as expected, so a programming error must have
           * happened
           */
          result = BLT_FALSE;
          break;
        }
      }
      /* check if an error was flagged during the verification step */
      if (result == BLT_FALSE)
      {
        /* no point in continuing with the programming loop */
        break;
      }
    }
    /* lock the flash array again */
    HAL_FLASH_Lock();
  }

  /* Give the result back to the caller. */
  return result;
}

static blt_bool FlashEraseSectors(blt_int8u first_sector_idx, blt_int8u last_sector_idx)
{
  blt_bool   result = BLT_TRUE;
  blt_int8u  sectorIdx;
  blt_addr   sectorBaseAddr;
  blt_int32u sectorSize;
  FLASH_EraseInitTypeDef eraseInitStruct;
  blt_int32u eraseSectorError = 0;

  /* validate the sector numbers */
  if (first_sector_idx > last_sector_idx)
  {
    result = BLT_FALSE;
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    if (last_sector_idx > (FLASH_TOTAL_SECTORS-1))
    {
      result = BLT_FALSE;
    }
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* unlock the flash array */
    HAL_FLASH_Unlock();

    /* erase the sectors one by one */
    for (sectorIdx = first_sector_idx; sectorIdx <= last_sector_idx; sectorIdx++)
    {
      /* service the watchdog */
      CopService();
      /* get information about the sector */
      sectorBaseAddr = flashLayout[sectorIdx].sector_start;
      sectorSize = flashLayout[sectorIdx].sector_size;
      /* validate the sector information */
      if ( (sectorBaseAddr == FLASH_INVALID_ADDRESS) || (sectorSize == 0) )
      {
        /* invalid sector information. flag error and abort erase operation */
        result = BLT_FALSE;
        break;
      }
      
      /* intialize the sector erase info structure */
      eraseInitStruct.TypeErase = FLASH_TYPEERASE_SECTORS;
      eraseInitStruct.VoltageRange = FLASH_VOLTAGE_RANGE_3;
      eraseInitStruct.Banks = flashLayout[sectorIdx].bank_num;
      eraseInitStruct.Sector = flashLayout[sectorIdx].sector_num;
      eraseInitStruct.NbSectors = 1;

      /* submit the sector erase request */
      if (HAL_FLASHEx_Erase(&eraseInitStruct, (uint32_t *)&eraseSectorError) != HAL_OK)
      {
        /* could not perform erase operation */
        result = BLT_FALSE;
        /* error detected so don't bother continuing with the loop */
        break;
      }

    }
    /* lock the flash array again */
    HAL_FLASH_Lock();
  }

  /* give the result back to the caller */
  return result;
}
